--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.arps.imean.HomeScreen"
-    android:id="@+id/wassap">
+    android:id="@+id/wassap"
+    android:background="#2F4F4F">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -21,7 +22,8 @@
             android:layout_height="wrap_content"
             android:text="GO"
             android:id="@+id/searchButton"
-            android:layout_gravity="right|center_vertical" />
+            android:layout_gravity="right|center_vertical"
+            android:background="#90ee90" />
 
         <EditText
             android:layout_width="250dp"
@@ -39,7 +41,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/frameLayout2">
+        android:layout_below="@+id/frameLayout2"
+        android:background="#FFF5EE">
 
         <ListView
             android:layout_width="wrap_content"
