--- a/app/src/main/res/layout/activity_label_word_list.xml
+++ b/app/src/main/res/layout/activity_label_word_list.xml
@@ -4,6 +4,38 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.arps.imean.LabelWordList">
+    tools:context="com.arps.imean.LabelWordList"
+    android:background="#2F4F4F">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/frameLayout3">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Mail this WordList"
+            android:id="@+id/mailListButton"
+            android:layout_gravity="center"
+            android:background="#90EE90" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/frameLayout3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="#FFF5EE">
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/wordsListView"
+            android:layout_gravity="center_horizontal|top" />
+    </FrameLayout>
 </RelativeLayout>
