--- a/app/src/main/res/layout/activity_meaning_display.xml
+++ b/app/src/main/res/layout/activity_meaning_display.xml
@@ -13,44 +13,64 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/frameLayout">
+        android:id="@+id/frameLayout"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
-        <TextView
-            android:layout_width="351dp"
-            android:layout_height="289dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/meaningTextView"
-            android:layout_gravity="left|top"
-            android:background="#FFFAFA" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="289dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Large Text"
+                android:id="@+id/meaningTextView"
+                android:layout_gravity="left|top"
+                android:maxLines = "35"
+                android:scrollbars = "vertical"
+                android:background="#FFFAFA" />
+
     </FrameLayout>
 
-    <EditText
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/addLabelEditText"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="68dp" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/frameLayout">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Enter label to store the word"
-        android:id="@+id/addLabelMessage"
-        android:layout_above="@+id/addLabelEditText"
-        android:layout_centerHorizontal="true"
-        android:textColor="#90EE90" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add"
-        android:id="@+id/addLabelButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="#90EE90" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/addLabelEditText"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="68dp"
+                android:layout_gravity="center_horizontal|bottom" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add"
+                android:id="@+id/addLabelButton"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:background="#90EE90"
+                android:layout_gravity="center_horizontal|bottom" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Enter label to store the word"
+                android:id="@+id/addLabelMessage"
+                android:layout_above="@+id/addLabelEditText"
+                android:layout_centerHorizontal="true"
+                android:textColor="#90EE90"
+                android:layout_gravity="center_horizontal|top" />
+        </RelativeLayout>
+    </FrameLayout>
 
 </RelativeLayout>
