--- a/app/src/main/res/layout/activity_one_word_meaning.xml
+++ b/app/src/main/res/layout/activity_one_word_meaning.xml
@@ -7,4 +7,17 @@
     tools:context="com.arps.imean.OneWordMeaning"
     android:background="#2f4f4f">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/meaningTextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="#FFFAFA" />
 </RelativeLayout>
