--- a/app/src/main/res/layout/activity_label_word_list.xml
+++ b/app/src/main/res/layout/activity_label_word_list.xml
@@ -33,7 +33,7 @@
         android:background="#FFF5EE">
 
         <ListView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/wordsListView"
             android:layout_gravity="center_horizontal|top" />
