--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -34,7 +34,8 @@
             android:layout_alignRight="@+id/frameLayout2"
             android:layout_alignEnd="@+id/frameLayout2"
             android:layout_marginRight="211dp"
-            android:layout_marginEnd="211dp" />
+            android:layout_marginEnd="211dp"
+            android:textColor="#FFFAFA" />
 
     </FrameLayout>
 
@@ -50,7 +51,7 @@
             >
         </ScrollView>
         <ListView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="388dp"
             android:id="@+id/labelsListView"
             android:layout_gravity="left|center_vertical" />
