--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.arps.imean.MainActivity">
+    tools:context="com.arps.imean.MainActivity"
+    android:background="#2F4F4F">
 
     <Button
         android:layout_width="wrap_content"
