--- a/app/src/main/res/layout/activity_meaning_display.xml
+++ b/app/src/main/res/layout/activity_meaning_display.xml
@@ -5,7 +5,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.arps.imean.MeaningDisplay"
-    android:background="#2F4F4F">
+    android:background="#2F4F4F"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
+    android:scrollbarAlwaysDrawVerticalTrack="true">
+
+
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -27,7 +32,8 @@
                 android:layout_gravity="left|top"
                 android:maxLines = "35"
                 android:scrollbars = "vertical"
-                android:background="#FFFAFA" />
+                android:background="#FFFAFA"
+                android:focusableInTouchMode="true" />
 
     </FrameLayout>
 
@@ -48,7 +54,9 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginBottom="68dp"
-                android:layout_gravity="center_horizontal|bottom" />
+                android:layout_gravity="center_horizontal|bottom"
+                android:focusableInTouchMode="true"
+                android:textColor="#FFFAFA" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -58,7 +66,8 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:background="#90EE90"
-                android:layout_gravity="center_horizontal|bottom" />
+                android:layout_gravity="center_horizontal|bottom"
+                android:focusableInTouchMode="true" />
 
             <TextView
                 android:layout_width="wrap_content"
