--- a/app/src/main/res/layout/activity_one_word_meaning.xml
+++ b/app/src/main/res/layout/activity_one_word_meaning.xml
@@ -19,5 +19,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:maxLines = "35"
+        android:scrollbars = "vertical"
         android:background="#FFFAFA" />
 </RelativeLayout>
