--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -23,7 +23,9 @@
             android:text="GO"
             android:id="@+id/searchButton"
             android:layout_gravity="right|center_vertical"
-            android:background="#90ee90" />
+            android:background="#90ee90"
+            android:focusable="false"
+            android:focusableInTouchMode="false" />
 
         <EditText
             android:layout_width="250dp"
@@ -35,7 +37,9 @@
             android:layout_alignEnd="@+id/frameLayout2"
             android:layout_marginRight="211dp"
             android:layout_marginEnd="211dp"
-            android:textColor="#FFFAFA" />
+            android:textColor="#FFFAFA"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
 
     </FrameLayout>
 
@@ -54,7 +58,9 @@
             android:layout_width="fill_parent"
             android:layout_height="388dp"
             android:id="@+id/labelsListView"
-            android:layout_gravity="left|center_vertical" />
+            android:layout_gravity="left|center_vertical"
+            android:focusableInTouchMode="false"
+            android:focusable="false" />
     </FrameLayout>
 
 </RelativeLayout>
