--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.arps.imean.MainActivity"
-    android:background="#2F4F4F">
+    android:background="#2F4F4F"
+    android:focusableInTouchMode="false"
+    android:focusable="false">
 
     <Button
         android:layout_width="wrap_content"
@@ -13,7 +15,9 @@
         android:text="@string/button_text"
         android:id="@+id/RishabhButton"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,5 +36,7 @@
         android:id="@+id/RishabhNextActButton"
         android:layout_marginTop="78dp"
         android:layout_below="@+id/RishabhButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:focusableInTouchMode="false"
+        android:focusable="false" />
 </RelativeLayout>
