--- a/app/src/main/res/layout/activity_one_word_meaning.xml
+++ b/app/src/main/res/layout/activity_one_word_meaning.xml
@@ -5,13 +5,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.arps.imean.OneWordMeaning"
-    android:background="#2f4f4f">
+    android:background="#2f4f4f"
+    android:focusableInTouchMode="false"
+    android:focusable="false">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
         android:id="@+id/meaningTextView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -21,5 +22,7 @@
         android:layout_alignParentEnd="true"
         android:maxLines = "35"
         android:scrollbars = "vertical"
-        android:background="#FFFAFA" />
+        android:background="#FFFAFA"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 </RelativeLayout>
